--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,20 @@
         <maven.compiler.release>21</maven.compiler.release>
         <exec.mainClass>isi.deso.tpdeso1.TPDESO1</exec.mainClass>
     </properties>
+    
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.6.3</version>
+          <configuration>
+            <source>21</source>
+            <failOnError>false</failOnError>
+            <doclint>none</doclint>
+            <encoding>UTF-8</encoding>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
 </project>
